--- a/07모듈.md
+++ b/07모듈.md
@@ -148,6 +148,8 @@ mod network {
 
 #### 세 모듈 ```client```, ```network```, ```network::server``` 모두 *src/lib.rs*에 정의됨
 ```rust
+// src/lib.rs 파일에서
+
 mod client {
     fn connect() {
     }
@@ -177,8 +179,159 @@ communicator
 🤓 <b>server</b> 모듈을 <i>src/lib.rs</i>로부터 떼어내어 각각 파일에 위치시킬 수 있음 🤓
 </pre>
 
-## 모듈 파일 시스템의 규칙
+#### ```client``` 모듈의 코드에서 선언 부분만 남겨두는 것으로 바꾸기
+```rust
+mod client;  // ← 요렇게!
 
+mod network {
+    fn connect() {
+    }
+
+    mod server {
+        fn connect() {
+        }
+    }
+}
+```
+* 위 코드에서도 여전히 ```client``` 모듈을 선언하고 있지만,<br>
+  **코드 블럭을 세미콜론으로 대체함으로써**<br>
+  러스트에게 ```client``` 모듈의 스코프 내에 정의된 코드를 **다른 위치에서 찾으라**고 말하는 것임.
+* ```mod client;``` 라인의 뜻:
+  
+  ```rust
+  mod client {
+      // contents of client.rs
+  }
+  ```
+* 세미콜론으로 대체된 코드 블럭의 내용을 담을 외부 파일이 필요함. (파일명: *src/client.rs*)
+  ```rust
+  // src/client.rs 파일에서
+  
+  fn connect() {
+  }
+  ```
+* ```mod client```라는 코드가 *src/lib.rs* 내에 정의되어야 하고, *src/client.rs* 내에는 정의될 수 없는 이유:<br>
+  더 많은 파일을 프로젝트에 추가하고 싶으면 *src/lib.rs* 내에서 다른 파일을 찾아보라고 러스트에게 말해줘야 함
+* 일단 ```cargo build``` 해본 결과<br>
+  ➕ 바이너리 크레이트가 아닌 라이브러리 크레이트 만드는 중이라 해당 커맨드 사용
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/fc51ed52-1f99-4bc2-aada-444c5dac999a" width="500px"><br><br>
+  성공적으로(?) 빌드됨
+<details>
+<summary>같은 방법으로 <code>network</code> 모듈 개별 파일 추출</summary>
+<div markdown="1">
+<br>
+
+```rust
+// src/lib.rs 파일에서
+
+mod client;
+
+mod network;
+```
+```rust
+// src/network.rs 파일에서
+
+fn connect() {
+}
+
+mod server {
+    fn connect() {
+    }
+}
+```
+<br>
+
+근데 ```server``` 모듈도 추출할거임 ^^;;
+<br>
+
+```rust
+// src/network.rs 파일에서
+
+fn connect() {
+}
+
+mod server;
+```
+```rust
+// src/server.rs 파일에서
+
+fn connect() {
+}
+```
+<br>
+
+```cargo build``` 실행
+
+<br>
+ummm.......<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/27172054-9bb2-4ece-8bad-267b7dc345e8" width="500px">
+<br><br>
+
+* ```server``` 서브모듈을 *src/server.rs*로 추출 시도했을 때 발생하는 에러
+* ```server``` 모듈 만들려면 ```create file "src/network/server.rs" or "src/network/server/mod.rs"``` 하라고 함<br><br>
+  ⬇️ 이거 하라는 거임
+  <pre>
+  $ mkdir src/network
+  $ mv src/metwork.rs src/network/mod.rs
+  $ mv src/server.rs src/network
+  </pre>
+  <br>
+  결과<br>
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/297174c0-d73e-440f-9519-5e977a3c4e1f" width="600px"><br>
+  
+  ```cargo build``` 실행 결과 → 경고 좀 있긴한데 된거임<br><br>
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/d3edfd1d-3e56-42d1-b417-26ea95488098" width="500px">
+
+</details>
+
+#### 모듈 레이아웃
+<pre>
+communicator
+ ├── client
+ └── network
+     └── server
+</pre>
+
+#### 대응하는 파일 레이아웃
+<pre>
+├── src
+│   ├── client.rs
+│   ├── lib.rs
+│   └── network
+│       ├── mod.rs
+│       └── server.rs
+</pre>
+
+* 위의 ⬇️ 과정을 거쳤던 이유<br>
+  : *src* 디렉토리 안에 *server.rs* 파일이 있으면, 러스트는 ```server```가 ```network```의 서브모듈이라고 인식할 수 없음
+
+<br>
+
+#### *src/lib.rs* 내에 모든 정의가 들어있는 다른 예제
+<pre>
+communicator
+ ├── client
+ └── network
+     └── client
+</pre>
+
+* ```cline```, ```network```, ```network::client```의 세 모듈이 있음
+* 최상위 층에 ```client``` 모듈이 있기 때문에 ```network::client``` 모듈을 *src/client.rs*로 추출하는 것이 불가능
+* 그래서 디렉토리를 만드는거임 ❗❗
+
+## 모듈 파일 시스템의 규칙
+* 만약 ```foo```라는 이름의 모듈이 서브모듈을 **가지고 있지 않다면**, *foo.rs* 파일 내에 ```foo```에 대한 선언이 있어야 함
+* 서브모듈을 **가지고 있다면**, 디렉토리를 생성하여 *foo/mod.rs* 파일 내에 ```foo```에 대한 선언이 있어야 함
+<br>
+⬆️ 위 규칙은 재귀적으로 적용됨<br><br>
+
+* ```foo``` 모듈이 ```bar``` 서브모듈을 소유하고, ```bar```는 서브모듈이 없다면 아래와 같은 파일이 요구됨.
+<pre>
+├── foo
+│   ├── bar.rs (contains the declarations in `foo::bar`)
+│   └── mod.rs (contains the declarations in `foo`, including `mod bar`)
+</pre>
+* 이 모듈들은 부모 모듈의 파일에 ```mod``` 키워드를 사용하여 선언돼 있어야 함
 <br><br>
 
 ## 2. pub으로 가시성 제어하기
