--- a/07모듈.md
+++ b/07모듈.md
@@ -1,5 +1,5 @@
 # 📜 07 Managing Growing Projects with Packages, Crates, and Modules
-[mod와 파일 시스템](#1-mod와-파일-시스템)&emsp;[pub](#2-pub으로-가시성-제어하기)&emsp;[use](#3-use로-이름-가져오기)
+[mod와 파일 시스템](#1-mod와-파일-시스템)&emsp;[pub](#2-pub으로-가시성visibility-제어하기)&emsp;[use](#3-use로-이름-가져오기)
 <br><br>
 
 ## 1. mod와 파일 시스템
@@ -319,7 +319,7 @@ communicator
 * 최상위 층에 ```client``` 모듈이 있기 때문에 ```network::client``` 모듈을 *src/client.rs*로 추출하는 것이 불가능
 * 그래서 디렉토리를 만드는거임 ❗❗
 
-## 모듈 파일 시스템의 규칙
+### 모듈 파일 시스템의 규칙
 * 만약 ```foo```라는 이름의 모듈이 서브모듈을 **가지고 있지 않다면**, *foo.rs* 파일 내에 ```foo```에 대한 선언이 있어야 함
 * 서브모듈을 **가지고 있다면**, 디렉토리를 생성하여 *foo/mod.rs* 파일 내에 ```foo```에 대한 선언이 있어야 함
 <br>
@@ -334,7 +334,106 @@ communicator
 * 이 모듈들은 부모 모듈의 파일에 ```mod``` 키워드를 사용하여 선언돼 있어야 함
 <br><br>
 
-## 2. pub으로 가시성 제어하기
+## 2. pub으로 가시성visibility 제어하기
+경고문이 나오는 이유를 알아보기 위해, ```connect``` 라이브러리를 타 프로젝트에서 사용해보기<br>
+<details>
+<summary>바이너리 크레이트 생성</summary>
+<div markdown="1">
+    
+```rust
+// src/main.rs 파일에서
+
+extern crate communicator;
+
+fn main() {
+    communicator::client::connect();
+}
+```
+* ```extern crate``` 명령어를 사용하여 ```communicator``` 라이브러리 크레이트를 가져옴
+* ```communicator``` 라이브러리 밖의 크레이트가 안을 들여다보는 시점에서, 만든 모든 모듈은 ```communicator```의 이름을 갖는 모듈 내에 있음
+* *루트 모듈root module*: 크레이트의 최상위 모듈
+<pre>
+💡 프로젝트 서브모듈 내에서 외부 크레이트를 이용하고 있다해도, <code>extern crate</code>가 루트 모듈에 와 있어야 함. (src/main.rs or src/lib.rs)
+</pre>
+➡️ 외부 크레이트로부터 아이템 참조 가능
+
+</details>
+
+<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/8b3577f6-e2cc-4b57-9b91-e88b2dfa2b6d" width="800px"><br><br>
+에러
+<pre>
+error[E0603]: module `client` is private
+ --> src/main.rs:4:19
+  |
+4 |     communicator::client::connect();
+  |                   ^^^^^^ private module
+  |
+</pre>
+
+* 러스트 모든 코드의 기본 상태는 **비공개**임 ➡️ 유일하게 내 프로그램만 사용 가능
+* 사용되지 않았다고도 경고해줌
+<br><br>
+#### ```client::connect```와 같은 함수 공개로 지정한다면 ⁉️
+➡️ 바이너리 크레이트 상에서 해당 함수 호출 가능<br>
+➡️ 함수 미사용에 대한 경고 사라짐 (외부에서 쓸 수 있는 가능성을 고려하기 때문)<br>
+
+### 함수를 공개로 만들기
+공개 원하는 아이템 선언 시작부에 ```pub``` 키워드 추가
+
+#### *src/lib.rs* 수정하여 ```client``` 모듈 공개로 만들기
+함수 미사용 경고, 비공개 에러 제거하기<br>
+```rust
+pub mod clients;
+
+mod network;
+```
+<br>
+
+```$ cargo build```
+<br><br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/abfc2588-59c5-4656-b59b-9c50ac881889" width="400px"><br><br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/b5d9a9a5-3779-42fa-8b42-eb71c7563574" width="600px"><br><br>
+오 . . .
+
+##### *src/client.rs* 수정을 통해 ```client::connect```도 공개로 만들기
+```rust
+// src/client.rs 파일에서
+
+pub fn connect() {
+}
+```
+<br>
+
+또 ```$ cargo build```
+<br><br>
+❗오류가 줄어들었음❗<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/87c9da56-1672-456b-a1c6-b0bc63e0944c" width="600px"><br><br>
+
+#### *src/network/mod.rs* 파일에 ```pub``` 표시
+그러나 여전히 미사용 함수 경고 존재.<br>
+↪️ 이유: 함수는 모듈 내에서 공개지만, 함수가 상주해 있는 ```network``` 모듈이 공개가 아님<br><br>
+*src/lib.rs* 수정해서 ```network``` 공개화<br>
+```rust
+// src/lib.rs 파일에서 
+
+pub mod client;
+
+pub mod network;
+```
+<br>
+
+```빌드``` ...
+<br>
+해당 오류 사라짐<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f9b32d8a-d1ba-496d-b34b-d6a1e75d98ae" width="600px"><br><br>
+
+#### 남은 거 고치려면 ...
+일단 *src/network/server.rs* 코드에서 ```connect``` 함수 앞에 ```pub``` 키워드 달았는데 그대로 남아있음.<br><br>
+그래서 ```pub``` 키워드 안 붙은 거 확인함<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/8d4dfb51-9497-4ed0-b368-9c95c58fe717" width="600px"><br><br>
+위 상황이랑 똑같음.<br><br>
+```그래서``` ❗함수가 속한 ```server``` 모듈을 공개 처리❗ ➡️ 해결
 <br><br>
 
 ## 3. use로 이름 가져오기
