--- a/07모듈.md
+++ b/07모듈.md
@@ -434,6 +434,49 @@ pub mod network;
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/8d4dfb51-9497-4ed0-b368-9c95c58fe717" width="600px"><br><br>
 위 상황이랑 똑같음.<br><br>
 ```그래서``` ❗함수가 속한 ```server``` 모듈을 공개 처리❗ ➡️ 해결
+
+### 비공개 규칙 Privacy Rules
+<pre>
+1. 만일 어떤 아이템이 공개라면, 이는 <b>부모 모듈의 어디에서건</b> 접근 가능
+2. 비공개라면, 같은 파일 내의 <b>부모 모듈 및 이 부모의 자식 모듈에서만</b> 접근 가능
+</pre>
+<br><br>
+몇 가지 부분이 잘못된 예제 코드
+```rust
+mod outermost {
+    pub fn middle_function() {}
+
+    fn middle_secret_function() {}
+
+    mod inside {
+        pub fn inner_function() {}
+
+        fn secret_function() {}
+    }
+}
+
+fn try_me() {
+    outermost::middle_function();
+    outermost::middle_secret_function();
+    outermost::inside::inner_function();
+    outermost::inside::secret_function();
+}
+```
+* 두 번째 비공개 규칙에 의해, ```try_me``` 함수와 ```outermost``` 모듈 모두 루트 모듈 내에 있어 앞선 함수가 앞선 모듈에 접근하는 것이 허용됨
+* ```middle_function``` 공개이므로 ```outermost::middle_function``` 호출 작동
+* ```try_me```는 ```middle_function``` 부모 모듈 ```outermost```을 통해 ```middle_function```에 접근
+<br>
+
+* ```outermost```가 현재 모듈인 상태에서, 루트 모듈이 ```middle_secret_function```의 현재 모듈이 아니고 현재 모듈의 자식 모듈도 아니기 때문에 ```outermost::middle_secret_function``` 호출에서 컴파일 에러 발생
+* ```inside``` 모듈은 비공개며 자식 모듈을 소유하지 않아, 현재 모듈인 ```outermost```에서만 접근될 수 있기 때문에, ```try_me``` 함수가 ```outermost::inside::inner_function```나 ```outermost::inside::secret_function```을 호출할 수 없음
+
+<br>
+
+#### 위 코드의 에러를 고치기 위해 비공개 규칙 이용하기
+* ```inside``` 모듈이 공개인 경우
+* ```outermost```가 공개고 ```inside```가 비공개인 경우
+* ```inner_function```의 내부에서 ```::outermost::middle_secret_function()```을 호출하는 경우<br>
+  ➕ 시작 부분의 ```::```: 루트 모듈에서부터 모듈을 참조하고 싶음을 뜻함
 <br><br>
 
 ## 3. use로 이름 가져오기
