--- a/07모듈.md
+++ b/07모듈.md
@@ -480,7 +480,157 @@ fn try_me() {
 <br><br>
 
 ## 3. use로 이름 가져오기
+```use``` 키워드를 이용하여 기존 함수 모듈을 가지고 올 때의 긴 함수 호출을 줄여줌<br><br>
+#### 모듈을 루트 스코프로 가져오기
+```rust
+pub mod a {
+    pub mod series {
+        pub mod of {
+            pub fn nested_modules() {}
+        }
+    }
+}
 
+use a::series::of;
+
+fn main() {
+    of::nested_modules();
+}
+```
+* ```a::series::of``` 모듈을 바이너리 크레이트의 루트 스코프로 가져옴
+* ```use a::series::of;```
+    * ```of``` 모듈을 참조하고 싶은 곳마다 해당 모듈 전부 호출하는 것 대신 ```of```만 쓰고 호출 가능
+
+#### 스코프 내에서 함수 가져오기
+```rust
+pub mod a {
+    pub mod series {
+        pub mod of {
+            pub fn nested_modules() {}
+        }
+    }
+}
+
+use a::series::of::nested_modules;
+
+fn main() {
+    nested_modules();
+}
+```
+* 모든 모듈을 쓰지 않고 함수를 직접 참조할 수 있음
+
+#### 열거형의 variant에서의 ```use``` 사용
+```rust
+enum TrafficLight {
+    Red,
+    Yellow,
+    Green,
+}
+
+use TrafficLight::{Red, Yellow};
+
+fn main() {
+    let red = Red;
+    let yellow = Yellow;
+    let green = TrafficLight::Green;
+}
+```
+* 하나의 이름공간에서 여러 개 아이템 가져오려면 구분 마지막에 ```::{아이템1, 아이템2}```과 같이 아이템 나열
+* ```Green``` variant에서 이름공간 명시하는 이유: ```use``` 구문 내에 ```Green```이 미포함됨
+
+### ```*``` glob 가져오기
+위처럼 아이템을 하나하나 입력하는게 아니라 ```*``` 문법을 이용하여 이름공간의 모든 아이템을 가져올 수 있음
+<br>
+```rust
+enum TrafficLight {
+    Red,
+    Yellow,
+    Green,
+}
+
+use TrafficLight::*;  // ← 이 부분임
+
+fn main() {
+    let red = Red;
+    let yellow = Yellow;
+    let green = Green;
+}
+```
+* ```*```을 glob이라고 부름
+* 이름공간 내 공개된 모든 아이템을 가져옴
+* 편리하지만 예상보다 많은 아이템을 끌고 와 충돌*naming conflic*을 초래할 수 있어 적당히 써야함.
+
+### super을 사용하여 부모 모듈에 접근하기
+*communicator/src/lib.rs* 파일 열기
+```rust
+pub mod client;
+
+pub mod network;
+
+pub fn add(left: usize, right: usize) -> usize {
+    left + right
+}
+
+#[cfg(test)]
+mod tests {
+    use super::*;
+
+    #[test]
+    fn it_works() {
+        let result = add(2, 2);
+        assert_eq!(result, 4);
+    }
+}
+```
+* 위에서 알 수 있듯이 ```test```라는 모듈이 있음
+<br>
+
+따라서 모듈 계층 구조는 다음과 같음
+<pre>
+communicator
+ ├── client
+ ├── network
+ |   └── client
+ └── tests
+</pre>
+
+#### ```tests``` 모듈 편집해보기
+해당 부분 아래와같이 편집
+```rust
+#[cfg(test)]
+mod tests {
+    #[test]
+    fn it_works() {
+        client::connect();
+    }
+}
+```
+<br>
+
+~~내 원 코드에서 저 부분만 편집하니까 컴파일이 성공해서 환경을 아예 똑같이 만들어줌~~
+```cargo test```
+<br><br>
+그러면 이런 코드가 컴파일 에러가 뜬다<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/bd2f5fe7-2d1b-4a2e-9c32-3df8ea25e6fc" width="500px">
+* 이유: 경로가 현재 모듈을 기준으로 상대적. ```tests``` 모듈은 스코프 내에서의 ```client``` 모듈이 필요함
+* ```tests``` 모듈 내에서 ```client::connect``` 함수 호출 해결방법<br>
+    1.  ```::client::connect();```을 통해 루트부터 시작해서 전체 경로를 나열함을 알려줄 수 있음<br>
+    2.  ```super::client::connect();```을 통해 현재 모듈로부터 한 모듈 거슬러 올라감
+* ```super``` 사용하여 현재 모듈에서 형제 모듈 가져오는 것이 더 효율적임. 모듈 계층 구조 깊어진 상태에서 매번 루트에서 시작하면 코드가 길어지기 때문.
+* ```tests``` 모듈 내에서 ```use super::something``` 사용이 베스트
+  <br>
+  
+  ```rust
+  #[cfg(test)]
+  mod tests {
+      use super::client;
+    
+     #[test]
+     fn it_works() {
+         client::connect();
+     }
+   }
+   ```
 
 
 [^id]: 다른 사람들이 자신들의 프로젝트에 dependency로 추가할 수 있는 프로젝트.
