--- a/rustlang/05연관데이터구조체로다루기.md
+++ b/rustlang/05연관데이터구조체로다루기.md
@@ -357,7 +357,7 @@ impl Rectangle {
 <br>
 위 데모를 포함하여 기존 코드 보완
 
-![image](https://github.com/redzzzi/Rust23summer/assets/127263392/af49be2a-bab7-446b-a61c-8b9685a8f5f9)<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/af49be2a-bab7-446b-a61c-8b9685a8f5f9" width="600px"><br>
 실행 결과<br>
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f3a2cb38-ff8a-44f1-a10a-732d0f5a0181" width="600px">
 <br><br>
