--- a/rustlang/07모듈.md
+++ b/rustlang/07모듈.md
@@ -607,7 +607,7 @@ mod tests {
 ```
 <br>
 
-~~내 원 코드에서 저 부분만 편집하니까 컴파일이 성공해서 환경을 아예 똑같이 만들어줌~~
+~~내 원래 코드에서 저 부분만 편집하니까 컴파일이 성공해서 환경을 아예 똑같이 만들어줌~~
 ```cargo test```
 <br><br>
 그러면 이런 코드가 컴파일 에러가 뜬다<br>
