--- a/rustlang/07모듈.md
+++ b/rustlang/07모듈.md
@@ -429,7 +429,7 @@ pub mod network;
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f9b32d8a-d1ba-496d-b34b-d6a1e75d98ae" width="600px"><br><br>
 
 #### 남은 거 고치려면 ...
-일단 *src/network/server.rs* 코드에서 ```connect``` 함수 앞에 ```pub``` 키워드 달았는데 그대로 남아있음.<br><br>
+일단 *src/network/server.rs* 코드에서 ```connect``` 함수 앞에 ```pub``` 키워드 달았는데 경고가 그대로 남아있음.<br><br>
 그래서 ```pub``` 키워드 안 붙은 거 확인함<br>
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/8d4dfb51-9497-4ed0-b368-9c95c58fe717" width="600px"><br><br>
 위 상황이랑 똑같음.<br><br>
