--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -1,1 +1,7 @@
+# 📜 09 Error Handling
+[panic!](#1-unrecoverable-errors-with-panic)&emsp;[Result](#2-recoverable-errors-with-result)&emsp;[panic!⭕❌](#3-to-panic-or-not-to-panic)
+<br><br>
 
+## 1. Unrecoverable Errors with panic!🤯
+## 2. Recoverable Errors with Result
+## 3. To panic!🤯 or Not to panic!🤓
