--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -2,4 +2,6 @@
 [](#1-)&emsp;[](#2-)&emsp;[](#3-)
 <br><br>
 
-## 1. 
+## 1. Storing Lists of Values with Vectors
+## 2. Storing UTF-8 Encoded Text with Strings
+## 3. Storing Keys with Associated Values in Hash Maps
