--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -1,7 +1,12 @@
 # 📜 Common Collections
-[](#1-)&emsp;[](#2-)&emsp;[](#3-)
+[Vectors](#1-storing-lists-of-values-with-vectors)&emsp;[Strings](#2-storing-utf-8-encoded-text-with-strings)&emsp;[Hash Maps](#3-storing-keys-with-associated-values-in-hash-maps)
 <br><br>
 
 ## 1. Storing Lists of Values with Vectors
+<br>
+
 ## 2. Storing UTF-8 Encoded Text with Strings
+<br>
+
 ## 3. Storing Keys with Associated Values in Hash Maps
+<br>
