--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -1,4 +1,7 @@
 # 📜 Common Collections
+* 러스트 표준라이브러리에는 *컬렉션*이라는 것이 있음. 여러 유용한 데이터 구조들이 포함되어 우리를 도와줌!
+* 컬렉션이 가리키는 데이터들은 힙에 저장됨<br>
+  → **데이터량**이 ☝️컴파일 타임에 결정되지 않아도 됨 ✌️프로그램이 실행될 때 늘어나거나 줄어들 수 있음<br><br>
 [Vectors](#1-storing-lists-of-values-with-vectors)&emsp;[Strings](#2-storing-utf-8-encoded-text-with-strings)&emsp;[Hash Maps](#3-storing-keys-with-associated-values-in-hash-maps)
 <br><br>
 
