--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -1,11 +1,54 @@
 # 📜 Common Collections
 * 러스트 표준라이브러리에는 *컬렉션*이라는 것이 있음. 여러 유용한 데이터 구조들이 포함되어 우리를 도와줌!
 * 컬렉션이 가리키는 데이터들은 힙에 저장됨<br>
-  → **데이터량**이 ☝️컴파일 타임에 결정되지 않아도 됨 ✌️프로그램이 실행될 때 늘어나거나 줄어들 수 있음<br><br>
+  → **데이터량**이 ☝️컴파일 타임에 결정되지 않아도 됨 ✌️프로그램이 실행될 때 늘어나거나 줄어들 수 있음<br><br><br>
 [Vectors](#1-storing-lists-of-values-with-vectors)&emsp;[Strings](#2-storing-utf-8-encoded-text-with-strings)&emsp;[Hash Maps](#3-storing-keys-with-associated-values-in-hash-maps)
 <br><br>
 
 ## 1. Storing Lists of Values with Vectors
+### Ⅰ. ```Vec<T>```
+* 단일 데이터 구조 안에 하나 이상의 값 저장
+* 같은 타입의 값만을 저장
+* 생성 예시
+    * ```Vec::new``` 함수 호출
+    <br>
+
+    ```rust
+    let v: Vec<i32> = Vec::new();
+    // v 안의 Vec가 i32 타입의 요소 가짐
+    ```
+* 벡터에 값 대입 안한 경우, **타입 명시** 해줘야 함<br>
+  (이때, 어떤 종류의 값도 저장 가능, 특정 타입 명시는 ```<>```를 통해 표시)
+* 벡터에 값 대입 한 경우, 러스트가 저장 값의 타입을 대부분 유추 → 타입 명시 불필요
+
+### Ⅱ. ```vec!``` 매크로
+* **대입된 값을 저장**하고, **새로운 ```Vec```을 생성**함
+* 아래의 경우, 값 1, 2, 3을 저장하고 해당 값의 타입 i32의 속성을 지닌 ```Vec<i32>```을 생성
+  <br>
+
+  ```rust
+  let v = vec![1, 2, 3];
+  ```
+  
+### Ⅲ. ```push``` 메소드
+* 벡터에 값을 추가하여 갱신할 수 있음
+* 사용 예시
+  <br>
+
+  ```rust
+  let mut v = Vec::new()
+
+  v.push(1);
+  v.push(2);
+  v.push(3);
+  v.push(4);
+  ```
+    * 일단 변수를 가변화시키려면 ```mut``` 키워드 사용해야함
+    * 집어넣는 숫자가 ```i32``` 타입이기 때문에 ```Vec<i32>```와같은 명시 불필요
+  
+### Ⅳ.
+### Ⅴ.
+### Ⅵ.
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
