--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -36,7 +36,7 @@
   <br>
 
   ```rust
-  let mut v = Vec::new()
+  let mut v = Vec::new();
 
   v.push(1);
   v.push(2);
@@ -46,8 +46,56 @@
     * 일단 변수를 가변화시키려면 ```mut``` 키워드 사용해야함
     * 집어넣는 숫자가 ```i32``` 타입이기 때문에 ```Vec<i32>```와같은 명시 불필요
   
-### Ⅳ.
-### Ⅴ.
+### Ⅳ. 벡터 드롭
+* 벡터 요소들이 스코프 밖으로 벗어나면 해제
+  <br>
+
+  ```rust
+  {
+  let v = vec!['안', '녕', '하', '세', '요'];  // 스코프 유효시되는 시작점
+  }  // 스코프 밖으로 벗어나 해제
+    * 벡터가 가지고 있던 값들이 제거됨
+    * v에 재접근 불가
+  ```
+
+### Ⅴ. 벡터 요소 읽기
+#### ⅰ. ```[]``` 메소드 *인덱스 문법*  
+```rust
+fn main() {
+    let v = vec![1, 2, 3, 4, 5];
+    let first: &i32 = &v[0];
+
+    println!("{:?}", first);
+}
+```
+```rust
+1
+```
+* ```&```와 ```[]```을 이용하여 참조자를 얻음
+
+#### ⅱ. ```get``` 메소드
+```rust
+fn main() {
+    let v = vec![1, 2, 3, 4, 5];
+    let second: Option<&i32> = v.get(1);
+
+    println!("{:?}", second);
+}
+```
+```rust
+Some(2)  // Option<&T>
+```
+* ```get``` 함수에 인덱스를 파라미터로 넘겨 ```Option<&T>```을 얻음
+
+#### ⅲ. 인덱스 범위를 초과하는 경우
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/3c3bcbc5-2e67-4fa1-bd6f-3404f47513e9" width="600px"><br>
+* ```vec_index.rs``` 파일의 인덱스 문법에서 ```panic!``` 발생 (친절하게 설명해줌)
+    * 인덱스 메소드는 벡터 범위 벗어났을 때 프로그램 중단시키고 싶다면 쓰기 좋은 방법임
+* ```vec_get.rs``` 파일의 ```get``` 함수에서 패닉 없이 ```None``` 반환
+    * 보통의 경우 사용하는 것 추천
+    * ```Some(&element) 또는 ```None```에 대한 로직을 갖춰 다른 상황으로 이어지게 할 수 있음
+
+  
 ### Ⅵ.
 <br>
 
