--- a/rustlang/04_소유권.md
+++ b/rustlang/04_소유권.md
@@ -25,9 +25,11 @@
 
 * 포인터 위치 따라가야 해서 속도 느림
 ## ⭐소유권 규칙⭐
+<pre>
 1. 러스트 각 값은 해당값의 owner라 불리는 변수를 가짐
 2. 한번에 하나의 오너만 존재 가능
-3. 오너가 스코프 밖으로 벗어날 때, 값은 무효화.
+3. 오너가 스코프 밖으로 벗어날 때, 값은 무효화됨.
+</pre>
 
 * Variable Scope: 변수가 유효한 범위를 나타내는 거. ```{ }```
 
