--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -94,9 +94,42 @@ Some(2)  // Option<&T>
 * ```vec_get.rs``` 파일의 ```get``` 함수에서 패닉 없이 ```None``` 반환
     * 보통의 경우 사용하는 것 추천
     * ```Some(&element) 또는 ```None```에 대한 로직을 갖춰 다른 상황으로 이어지게 할 수 있음
+ 
+#### ⅳ. 벡터 수정 시 고려해야할 빌림 문제
+<pre>
+<b>참조자 규칙 中</b><br>
+같은 스코프 내에서 가변 참조자와 불변 참조자를 동시에 가질 수 없다
+</pre>
+```rust
+let mut v = vec![1, 2, 3, 4, 5];           // 1
+let first = &v[0];                         // 2
+v.push(6);                                 // 3
+println!("The first element is: {first}"); // 4
+```
+<details>
+<summary>경고와 설명들</summary>
+<div markdown="1">
+
+```cargo run```<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/5e4dd4dd-4ec1-4d22-9a91-8fd1b9e4d76d" width="600px">
+<br><br>
+```rustc --explain E0502```<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/e7e1bc83-ac2f-40d9-8fd2-cde5a4c45394" width="600px">
+<br><br>
+➕ ```rustc --explain E0499```<br><br>
+<i>어떤 변수에 대해서 동시에 두번 이상 가변 참조할 수 없음 (단, 불변 참조는 여러 번 가능)</i><br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/4f943394-b5a3-4022-8725-226a3b3692aa" width="600px">
+
+</details>
+
+* 두 번째 라인에서 ```immutable``` borrow, 세 번째 라인에서 ```mutable``` borrow
+* 위 코드가 동작하는 방식<br>
+  : 
 
   
-### Ⅵ.
+### Ⅵ. 벡터 값들에 대한 반복 처리
+
+### Ⅶ. 열거형으로 여러 타입 저장하기
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
