--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -93,7 +93,7 @@ Some(2)  // Option<&T>
     * 인덱스 메소드는 벡터 범위 벗어났을 때 프로그램 중단시키고 싶다면 쓰기 좋은 방법임
 * ```vec_get.rs``` 파일의 ```get``` 함수에서 패닉 없이 ```None``` 반환
     * 보통의 경우 사용하는 것 추천
-    * ```Some(&element) 또는 ```None```에 대한 로직을 갖춰 다른 상황으로 이어지게 할 수 있음
+    * ```Some(&element)``` 또는 ```None```에 대한 로직을 갖춰 다른 상황으로 이어지게 할 수 있음
  
 #### ⅳ. 벡터 수정 시 고려해야할 빌림 문제
 <pre>
@@ -123,8 +123,13 @@ println!("The first element is: {first}"); // 4
 </details>
 
 * 두 번째 라인에서 ```immutable``` borrow, 세 번째 라인에서 ```mutable``` borrow
-* 위 코드가 동작하는 방식<br>
-  : 
+* 위 코드가 동작하는 방식<br><br>
+  : ```push``` 메소드 사용할 때, 벡터가 메모리에서 값을 옆에 계속 배치하다보니 모든 요소가 들어갈 공간이 충분치 않다면 새 메모리를 할당하고 새 공간이 이전 요소를 복사해야(기존 메모리 공간 해제)할 상황이 생길 수 있음<br><br>
+  : 이때 첫번째 요소 참조자가 할당 해제된 메모리를 가리키게 될 수 있음<br>
+<pre>
+  → 메모리 할당 및 복사 작업으로 인해 요소 위치가 변경될 수 있는 상황에는 벡터의 가변 참조를 가져오는 동안 다른 가변 참조를 가져올 수 없음<br>
+  → 벡터 요소들이 유효한 메모리에 계속 존재할 수 있음
+</pre>
 
   
 ### Ⅵ. 벡터 값들에 대한 반복 처리
