--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -130,9 +130,25 @@ println!("The first element is: {first}"); // 4
   → 메모리 할당 및 복사 작업으로 인해 요소 위치가 변경될 수 있는 상황에는 벡터의 가변 참조를 가져오는 동안 다른 가변 참조를 가져올 수 없음<br>
   → 벡터 요소들이 유효한 메모리에 계속 존재할 수 있음
 </pre>
-
   
-### Ⅵ. 벡터 값들에 대한 반복 처리
+### Ⅵ. ```for``` 루프를 사용한 벡터 값들에 대한 반복 처리
+* 불변 참조자 얻어서 ```for``` 써서 어쩌구저쩌구 하면 됨<br>
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/18dde88e-8dab-4c27-ae94-3adcc50c6867" width="600px"><br>
+* 요소들에 *더하기, 빼기 등의* 변형을 하려면??
+  <br>
+
+  ```rust
+  fn main() {
+      let mut v = vec![10, 20, 30];
+      for i in &mut v {
+          *i += 5;  
+          println!("{}", i);
+      }
+  }
+  ```
+  
+* 
+
 
 ### Ⅶ. 열거형으로 여러 타입 저장하기
 <br>
