--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -146,11 +146,12 @@ println!("The first element is: {first}"); // 4
       }
   }
   ```
-  
-* 
-
+    * 가변 참조 생성
+    * ```*i```라고 표기함으로써 실제 값에 접근하고 수정하는 것이 가능
+    * 역참조 연산자 ```*```
 
 ### Ⅶ. 열거형으로 여러 타입 저장하기
+
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
