--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -151,6 +151,13 @@ println!("The first element is: {first}"); // 4
     * 역참조 연산자 ```*```
 
 ### Ⅶ. 열거형으로 여러 타입 저장하기
+* 벡터는 같은 타입의 값만 저장 가능 → 불편
+* 같은 열거형 타입 내에서 **다른 타입들의 variant**를 설정할 수 있음!
+* 사용 예시
+  <br>
+
+  ```rust
+
 
 <br>
 
