--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -157,8 +157,30 @@ println!("The first element is: {first}"); // 4
   <br>
 
   ```rust
-
-
+  fn main() {
+      enum DifferentType {
+          Int(i32),
+          Float(f64),
+          Text(String),
+      }
+  
+      let cool = vec![
+          DifferentType::Int(311),
+          DifferentType::Float(3.12),
+          DifferentType::Text(String::from("wow")),
+      ];
+  
+      for i in cool {
+          match i {
+              DifferentType::Int(value)   => println!("Int: {}", value),
+              DifferentType::Float(value) => println!("Float: {}", value),
+              DifferentType::Text(value)  => println!("Text: {}", value),
+          }
+      }
+  }
+  ```
+    * 벡터 내 저장될 타입을 알아야 하는 이유: 요소 저장 시 필요한 힙 [메모리](http://www.tcpschool.com/c/c_memory_structure) 용량 파악
+    * 흐름 제어 연산자 [match](https://github.com/redzzzi/Rust23summer/blob/main/rustlang/06_%EC%97%B4%EA%B1%B0%ED%98%95%EA%B3%BC%ED%8C%A8%ED%84%B4%EB%A7%A4%EC%B9%AD.md#2-match-%ED%9D%90%EB%A6%84-%EC%A0%9C%EC%96%B4-%EC%97%B0%EC%82%B0%EC%9E%90)
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
