--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -184,6 +184,16 @@ println!("The first element is: {first}"); // 4
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
+### Ⅰ. ```String```
+
+### Ⅱ.
+
+### Ⅲ.
+
+### Ⅳ.
+
+### Ⅴ.
+
 <br>
 
 ## 3. Storing Keys with Associated Values in Hash Maps
