--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -184,9 +184,97 @@ println!("The first element is: {first}"); // 4
 <br>
 
 ## 2. Storing UTF-8 Encoded Text with Strings
-### Ⅰ. ```String```
+### Ⅰ. 스트링
+* **스트링**이라고 하면 ```String```과 슬라이스 ```&str``` 타입 둘 모두를 일컬음
+* 위 둘 모두 UTF-8로 인코딩 됨
+* 빈 ```String``` 생성 예시
+  <br>
 
-### Ⅱ.
+  ```rust
+  let mut s = String::new()
+  ```
+### Ⅱ-ⅰ.  ```to_string``` 메소드
+* 초깃값을 담은 스트링 생성
+  <br>
+
+  ```rust
+  fn main() {
+      let data = "initial contents";
+      let s = data.to_string();
+  
+      let s = "initial contents".to_string();
+  
+      println!("data: {}", data);
+      println!("s: {}", s);
+  }
+  ```
+  ```rust
+  data: initial contents
+  s: initial contents
+  ```
+  
+### Ⅱ-ⅱ. ```String::from``` 함수
+```.to_string``` 메소드와 같은 역할을 함
+  
+<details>
+<summary>예시</summary>
+<div markdown="1">
+  
+```rust
+fn main() {
+    let hello = String::from("안녕하세요!");
+    println!("Korean: {}", hello);
+
+    let hello = String::from("السلام عليكم");
+    println!("Arabic: {}", hello);
+
+    let hello = String::from("Dobrý den");
+    println!("Czech: {}", hello);
+
+    let hello = String::from("Hello");
+    println!("English: {}", hello);
+
+    let hello = String::from("שָׁלוֹם");
+    println!("Hebrew: {}", hello);
+
+    let hello = String::from("नमस्ते");
+    println!("Hindi: {}", hello);
+
+    let hello = String::from("こんにちは");
+    println!("Japanese: {}", hello);
+
+    let hello = String::from("你好");
+    println!("Mandarin Chinese: {}", hello);
+
+    let hello = String::from("Olá");
+    println!("Portuguese: {}", hello);
+
+    let hello = String::from("Здравствуйте");
+    println!("Russian: {}", hello);
+
+    let hello = String::from("Hola");
+    println!("Spanish: {}", hello);
+}
+```
+```rust
+Korean: 안녕하세요!
+Arabic: السلام عليكم
+Czech: Dobrý den
+English: Hello
+Hebrew: שָׁלוֹם
+Hindi: नमस्ते
+Japanese: こんにちは
+Mandarin Chinese: 你好
+Portuguese: Olá
+Russian: Здравствуйте
+Spanish: Hola
+```
+* 스트링이 ```UTF-8```로 인코딩 됨
+* 위와같이 인코딩된 어떤 데이터라도 포함 가능
+</details>
+  
+  
+ 
 
 ### Ⅲ.
 
