--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -273,10 +273,20 @@ Spanish: Hola
 * 위와같이 인코딩된 어떤 데이터라도 포함 가능
 </details>
   
-  
- 
+### Ⅲ-ⅰ. ```push_str``` 메소드
+스트링 슬라이스 ```str```을 파라미터로 받아서 ```String```에 추가
+* 사용 예시
+  <br>
 
-### Ⅲ.
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f7f4b9f1-731d-4851-84c7-56772cc9157d" width="700px">
+
+
+### Ⅲ-ⅱ. ```push``` 메소드
+한 개의 글자를 파라미터로 받아서 ```String```에 추가
+* 사용 예시
+  <br>
+
+  <img src=
 
 ### Ⅳ.
 
