--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -280,13 +280,21 @@ Spanish: Hola
 
   <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f7f4b9f1-731d-4851-84c7-56772cc9157d" width="700px">
 
-
 ### Ⅲ-ⅱ. ```push``` 메소드
 한 개의 글자를 파라미터로 받아서 ```String```에 추가
 * 사용 예시
   <br>
 
-  <img src=
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/4ae0304e-bce9-478f-bfb2-b2671c00e0b6" width="700px">
+
+### Ⅲ-ⅲ. ```+``` 연산자와 ```format!``` 매크로를 이용한 접합
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/2af719d4-af80-4d82-b3b4-bb34cfdbae80" width="700px">
+
+#### **+** 연산자의 ```add``` 메소드
+
+
+
+
 
 ### Ⅳ.
 
