--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -288,13 +288,19 @@ Spanish: Hola
   <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/4ae0304e-bce9-478f-bfb2-b2671c00e0b6" width="700px">
 
 ### Ⅲ-ⅲ. ```+``` 연산자와 ```format!``` 매크로를 이용한 접합
+#### 🫧 ```+``` 연산자 🫧
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/2af719d4-af80-4d82-b3b4-bb34cfdbae80" width="700px">
 
-#### **+** 연산자의 ```add``` 메소드
+* ```+``` 연산자는 ```add``` 메소드를 사용함. 아래는 그 시그니처임.
+  <br>
 
-
-
-
+  ```rust
+  fn add(self, s: &str) -> String {
+  ```
+* ```String```에 ```&str```만 더할 수 있음! 두 ```String```을 더하는 것은 불가!!
+* ```&String``` 타입인 ```s1```과 ```s2```가 컴파일 되는 이유: ```&String``` 인자가 ```&str```로 강제될 수 있음 ⭐
+  
+#### ```format!``` 매크로
 
 ### Ⅳ.
 
