--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -291,14 +291,24 @@ Spanish: Hola
 #### 🫧 ```+``` 연산자 🫧
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/2af719d4-af80-4d82-b3b4-bb34cfdbae80" width="700px">
 
+* ```s1```의 소유권을 가져다가 ```s2```의 내용물의 복사본을 추가한 다음, 결과물의 소유권을 반환함<br><br>
+
 * ```+``` 연산자는 ```add``` 메소드를 사용함. 아래는 그 시그니처임.
   <br>
 
   ```rust
-  fn add(self, s: &str) -> String {
+  fn add(self, s: &str) -> String { // add가 self의 소유권을 가져감
   ```
+  <pre>
+  <b>역참조 강제 (add 호출 시 적용)</b><br>
+  [예시] <code>add</code> 함수 내에서 사용되는 <code>&s2</code>가 <code>&s2[..]</code>로 바뀜
+  </pre>
+    * ```add```가 파라미터의 소유권까지 가져가지는 않음<br><br>
+    
 * ```String```에 ```&str```만 더할 수 있음! 두 ```String```을 더하는 것은 불가!!
-* ```&String``` 타입인 ```s1```과 ```s2```가 컴파일 되는 이유: ```&String``` 인자가 ```&str```로 강제될 수 있음 ⭐
+* ```&String``` 타입인 ```s1```과 ```s2```가 컴파일 되는 이유 / ```&s2```를 ```add``` 호출에 사용할 수 있는 이유<br>
+  <pre><code>&String</code> 인자가 <code>&str</code>로 강제될 수 있기 때문 ⭐</pre>
+
   
 #### ```format!``` 매크로
 
