--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -193,6 +193,8 @@ println!("The first element is: {first}"); // 4
   ```rust
   let mut s = String::new()
   ```
+<br>
+
 ### Ⅱ-ⅰ.  ```to_string``` 메소드
 * 초깃값을 담은 스트링 생성
   <br>
@@ -212,7 +214,8 @@ println!("The first element is: {first}"); // 4
   data: initial contents
   s: initial contents
   ```
-  
+<br>
+
 ### Ⅱ-ⅱ. ```String::from``` 함수
 ```.to_string``` 메소드와 같은 역할을 함
   
@@ -279,6 +282,7 @@ Spanish: Hola
   <br>
 
   <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/f7f4b9f1-731d-4851-84c7-56772cc9157d" width="700px">
+<br>
 
 ### Ⅲ-ⅱ. ```push``` 메소드
 한 개의 글자를 파라미터로 받아서 ```String```에 추가
@@ -286,8 +290,11 @@ Spanish: Hola
   <br>
 
   <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/4ae0304e-bce9-478f-bfb2-b2671c00e0b6" width="700px">
+<br>
 
 ### Ⅲ-ⅲ. ```+``` 연산자와 ```format!``` 매크로를 이용한 접합
+---
+
 #### 🫧 ```+``` 연산자 🫧
 <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/2af719d4-af80-4d82-b3b4-bb34cfdbae80" width="700px">
 
@@ -303,14 +310,38 @@ Spanish: Hola
   <b>역참조 강제 (add 호출 시 적용)</b><br>
   [예시] <code>add</code> 함수 내에서 사용되는 <code>&s2</code>가 <code>&s2[..]</code>로 바뀜
   </pre>
-    * ```add```가 파라미터의 소유권까지 가져가지는 않음<br><br>
+    * ```add```가 파라미터의 소유권까지 가져가지는 않음
+<br><br>
     
 * ```String```에 ```&str```만 더할 수 있음! 두 ```String```을 더하는 것은 불가!!
 * ```&String``` 타입인 ```s1```과 ```s2```가 컴파일 되는 이유 / ```&s2```를 ```add``` 호출에 사용할 수 있는 이유<br>
   <pre><code>&String</code> 인자가 <code>&str</code>로 강제될 수 있기 때문 ⭐</pre>
 
+* 여러 스트링 다루기엔 역부족 🤔
+  <br>
+
+  ```rust
+  let s1 = String::from("tic");
+  let s2 = String::from("tac");
+  let s3 = String::from("toe");
   
+  let s = s1 + "-" + &s2 + "-" + &s3; // 언제 이걸 다 치냐..
+  ```
+---
+
 #### ```format!``` 매크로
+* 얘가 add보다 훨씬 효율적임
+* 파라미터 소유권 안 가져감
+* 위와 같은 기능을 하는 코드
+  <br>
+
+  ```rust
+  let s1 = String::from("tic");
+  let s2 = String::from("tac");
+  let s3 = String::from("toe");
+  
+  let s = format!("{}-{}-{}", s1, s2, s3);
+  ```
 
 ### Ⅳ.
 
