--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -342,8 +342,12 @@ Spanish: Hola
   
   let s = format!("{}-{}-{}", s1, s2, s3);
   ```
+<br>
 
-### Ⅳ.
+<del>스트링 왜 이렇게 어려운거야ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ</del>
+
+### Ⅳ. 스트링 내부 인덱싱
+
 
 ### Ⅴ.
 
