--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -347,7 +347,36 @@ Spanish: Hola
 <del>스트링 왜 이렇게 어려운거야ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ</del>
 
 ### Ⅳ. 스트링 내부 인덱싱
+* 스트링에 인덱싱 문법 지원 안함
+  <br>
+  ```rust
+  let s1 = String::from("hello");
+  let h = s1[0];
+  ```
+  ^ 이런 거 지원 안해준다는 소리임
+* 내부적 표현: ```String```은 ```Vec<u8>```을 감싼 것임
+* 유니코드 인코딩 바이트
+    * 일반적으로 생각하는 그 인덱싱처럼 반환하는 것이 아니라 ***몇 바이트인지***를 리턴함
+      <br>
 
+      ```rust
+      fn main() {
+          let first = String::from("Hola").len();
+          println!("length of first is {}", first);
+      
+          let second = String::from("Здравствуйте").len();
+          println!("length of second is {}", second);
+      
+          let hello = "Здравствуйте";
+          let third = String::from(hello).len();
+          println!("length of third is {}", third);
+      }
+      ```
+      ```rust
+      length of first is 4
+      length of second is 24
+      length of third is 24
+      ```
 
 ### Ⅴ.
 
