--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -366,19 +366,33 @@ Spanish: Hola
       
           let second = String::from("Здравствуйте").len();
           println!("length of second is {}", second);
-      
-          let hello = "Здравствуйте";
-          let third = String::from(hello).len();
-          println!("length of third is {}", third);
       }
       ```
       ```rust
       length of first is 4
       length of second is 24
-      length of third is 24
       ```
 
-### Ⅴ.
+#### ➕ 문자열을 보는 세 가지 방식: ```Bytes```, ```Scalar values``` and ```Grapheme cluster```
+* 힌디어 नमस्ते(안녕하세요)은 ```u8``` 값들이 ```Vec```로 아래처럼 저장됨
+  <br>
+
+  <pre>[224, 164, 168, 224, 164, 174, 224, 164, 184, 224, 165, 141, 224, 164, 164, 224, 165, 135]</pre>
+    * 18```Bytes```임 → 컴퓨터는 이를 궁극적으로 저장함<br><br>
+    
+    * ```Scalar values```인 ```char``` 타입으로 본다면?
+      <br>
+
+      <pre>['न', 'म', 'स', '्', 'त', 'े']</pre>
+    * ```Grapheme cluster```로 본다면?
+      <br>
+
+      <pre>["न", "म", "स्", "ते"]</pre>
+
+* 스트링을 번역하는 다양한 방법 제공하여 프로그램이 필요로 하는 방식 선택 가능
+<br>
+
+### Ⅴ. 스트링 슬라이싱하기!
 
 <br>
 
