--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -369,8 +369,8 @@ Spanish: Hola
       }
       ```
       ```rust
-      length of first is 4
-      length of second is 24
+      length of first is 4 // 4바이트임
+      length of second is 24 // 24바이트임. 글자 하나 당 2바이트
       ```
 
 #### ➕ 문자열을 보는 세 가지 방식: ```Bytes```, ```Scalar values``` and ```Grapheme cluster```
@@ -393,6 +393,15 @@ Spanish: Hola
 <br>
 
 ### Ⅴ. 스트링 슬라이싱하기!
+* 좀 더 구체적인 인덱싱이 필요함 → ```[]```와 **바이트** 범위 사용
+* 사용 예시
+  <br>
+
+  ```rust
+  let hello = "Здравствуйте"; // 글자 하나가 2바이트
+  let s = &hello[0..4]; // 4바이트 범위까지
+  ```
+    * s는 **Зд**을 가리킴 
 
 <br>
 
