--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -402,7 +402,38 @@ Spanish: Hola
   let s = &hello[0..4]; // 4바이트 범위까지
   ```
     * s는 **Зд**을 가리킴 
+<br>
 
+### Ⅵ. 스트링 내 반복 실행
+
+#### ```chars``` 메소드
+```rust
+for c in "नमस्ते".chars() {
+    println!("{}", c);
+}
+```
+```rust
+न
+म
+स
+्
+त
+े
+```
+
+#### ```bytes``` 메소드
+```rust
+for b in "नमस्ते".bytes() {
+    println!("{}", b);
+}
+```
+```rust
+224
+164
+168
+224
+// ... etc
+```
 <br>
 
 ## 3. Storing Keys with Associated Values in Hash Maps
