--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -437,4 +437,54 @@ for b in "नमस्ते".bytes() {
 <br>
 
 ## 3. Storing Keys with Associated Values in Hash Maps
+
+### Ⅰ. ```HashMap```
+* ```HashMap<K, V>``` 타입: ```K``` 타입 키에 ```V``` 타입의 값을 매핑한 것을 저장함
+* 데이터를 힙에 저장
+* ```String``` 타입의 키, ```i32``` 타입의 값
+<br>
+
+* HashMap 생성
+    1. 컬렉션에서 ```HashMap```을 가져와야함: ```use std::collections::HashMap;```
+    2. ```HashMap::new();```
+    3. 키와 값 insert: ```변수명.insert(String::from("key"), value);```
+    <br><br>
+    
+    <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/7814d052-e71b-4343-87ce-1b54112b78a0" width="700px">
+
+* 아래와같이 ```collect``` 메소드로도 해쉬맵 생성 가능
+  <br>
+
+  ```rust
+  use std::collections::HashMap;
+
+  let teams  = vec![String::from("Blue"), String::from("Yellow")];
+  let initial_scores = vec![10, 50];
+  
+  let scores: HashMap<_, _> = teams.iter().zip(initial_scores.iter()).collect();
+  ```
+    * 타입 명시 ```HashMap<_, _>``` 필요!!!
+
+<br>
+
+### Ⅱ. 해쉬맵과 소유권
+* 키와 값들이 insert 되면, 이것들은 해쉬맵의 소유가 됨
+
+### Ⅲ. 해쉬맵 내 값 접근
+#### ```get``` 메소드에 키 제공
+* 키 값을 &String 형태로 전달해야함
+<img src="https://github.com/redzzzi/Rust23summer/assets/127263392/660c0856-74a2-4044-b49f-0a161125d3e6" width="700px"><br>
+    * ```get```은 ```OPtion<&V>``` 반환
+    * 해당 값이 없다면 ```None``` 반환
+
+#### ```for``` 루프 이용
+```rust
+for (key, value) in &해쉬맵변수 {
+```
+
+### Ⅳ. 해쉬맵 갱신
+
+
+
+ⅤⅥⅦ
 <br>
