--- a/rustlang/08_일반컬렉션.md
+++ b/rustlang/08_일반컬렉션.md
@@ -469,6 +469,7 @@ for b in "नमस्ते".bytes() {
 
 ### Ⅱ. 해쉬맵과 소유권
 * 키와 값들이 insert 되면, 이것들은 해쉬맵의 소유가 됨
+<br>
 
 ### Ⅲ. 해쉬맵 내 값 접근
 #### ```get``` 메소드에 키 제공
@@ -483,8 +484,90 @@ for (key, value) in &해쉬맵변수 {
 ```
 
 ### Ⅳ. 해쉬맵 갱신
+#### ```insert```로 덮어씌우기
+```rust
+hashmap.insert(String::from("Replace"), 10);
+hashmap.insert(String::from("Replace"), 15);
+// Replace의 값이 10에서 15로 바뀜
+```
+
+#### ```entry``` 메소드 이용
+* 어떤 키가 **값을 가지고 있지 않을 경우**에만 추가
+```rust
+hashmap.insert(String::from("Blue"), 10);
+
+hashmap.entry(String::from("Blue")).or_insert(15);     // 대체 안 됨
+hashmap.entry(String::from("Yellow")).or_insert(20);   // 대체 
+```
+
+#### 단어 사용 횟수 예제
+```rust
+fn main() {
+    use std::collections::HashMap;
+
+    let text = "hello world wonderful world";
+    
+    let mut map = HashMap::new();
+    
+    for word in text.split_whitespace() {
+        let count = map.entry(word).or_insert(0);
+        *count += 1;
+    }
+    
+    println!("{:?}", map);
+```
+```rust
+{"world": 2, "wonderful": 1, "hello": 1}
+```
+* 작동 방식
+    1. 공백 기준으로 텍스트 분리
+    2. 단어 하나씩 for문에 집어넣기
+    3. 우선 word에 단어 hello가 들어갈 때, key가 hello, value가 0인 맵이 생성됨
+    4. 이때 count에 value인 가변 참조자 0를 반환하게 되는데, *count를 통해 이를 역참조하여 +1 시킨 횟수를 기록
+    5. world는 두 번 나오는데, 두 번째 world를 받을 때 count가 1인 상태에서 +1이 되어 횟수가 2로 기록됨<br>
+       (*count의 영향으로 값이 바뀌면서 해당 key에 대한 value도 바뀐 듯)
+<details>
+<summary>과정 자세히 보기</summary>
+<div markdown="1">
+
+```rust
+fn main() {
+    use std::collections::HashMap;
+
+let text = "hello world wonderful world";
+
+let mut map = HashMap::new();
+
+for word in text.split_whitespace() {
+    let count = map.entry(word).or_insert(0);
+    println!("count: {}", count);
+        *count += 1;
+        println!("*count: {}", *count);
+        println!("for check {:?}", map);
+}
+
+println!("\n\n{:?}", map);
+
+}
+```
+```rust
+count: 0
+*count: 1
+for check {"hello": 1}
+count: 0
+*count: 1
+for check {"hello": 1, "world": 1}
+count: 0
+*count: 1
+for check {"hello": 1, "world": 1, "wonderful": 1}
+count: 1
+*count: 2
+for check {"hello": 1, "world": 2, "wonderful": 1}
 
 
-
+{"hello": 1, "world": 2, "wonderful": 1}
+```
+</details>
+  
 ⅤⅥⅦ
 <br>
