--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -3,6 +3,23 @@
 <br><br>
 
 ## 1. Unrecoverable Errors with panic!🤯
+
+### ```panic!```
+* 패닉이 발생하면 프로그램은 *되감기*를 시작하면서 많은 일을 함
+* 아래 설정을 통해 *그만두기*를 설정하여 ```build``` 시에 되감기가 아닌 그만두기로 설정할 수 있음
+  <br>
+
+  ```rust
+  // Cargo.toml 파일 추가 내용
+  [profil.release]
+  panic = 'abort'
+  ```
+  <img src="https://github.com/redzzzi/Rust23summer/assets/127263392/5c225a1f-1bde-47c1-ac6b-2234bd8a5c30" width="700px"><br>
+    * panic! 발생한 부분에 대한 설명이 있음
+---
+### panic! 백트레이스 사용
+* *backtrace*: 어떤 지점에 도달하기까지 호출해온 모든 함수의 리스트
+* ```RUST_BACKTRACE=1 cargo run``` 명령어를 통해 문제를 일으킨 지점을 순서대로 찾아갈 수 있음
 <br>
 
 ## 2. Recoverable Errors with Result
