--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -23,6 +23,7 @@
 <br>
 
 ## 2. Recoverable Errors with Result
+💡 [2장] ```Result``` 열거형은 ```Ok```와 ```Err``` 두 variant를 갖는다💡
 <br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
