--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -5,7 +5,7 @@
 ## 1. Unrecoverable Errors with panic!🤯
 
 ### ```panic!```
-* 패닉이 발생하면 프로그램은 *되감기*를 시작하면서 많은 일을 함
+* 패닉이 발생하면 프로그램은 많은 일을 함 (실패 메시지 출력 → 스택 되감고 청소하기 → 종료)
 * 아래 설정을 통해 *그만두기*를 설정하여 ```build``` 시에 되감기가 아닌 그만두기로 설정할 수 있음
   <br>
 
@@ -27,4 +27,7 @@
 <br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
+┌ ```panic!``` 사용 → 
+│
+└ ```Result``` 사용 →
 <br>
