--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -27,7 +27,7 @@
 <br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
-┌ ```panic!``` 사용 → 
-│
-└ ```Result``` 사용 →
+┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것<br>
+│<Br>
+└ ```Result``` 사용 → 바로 코드의 복구 가능성을 따지기보다는, 옵션을 제공하는 것
 <br>
