--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -24,6 +24,78 @@
 
 ## 2. Recoverable Errors with Result
 💡 [2장] ```Result``` 열거형은 ```Ok```와 ```Err``` 두 variant를 갖는다💡
+
+### ```File::open``` 함수
+* 반환 타임: ```Result<T, E>```
+* 파일 열기 코드
+  <br>
+
+  ```rust
+  use std::fs::File;
+
+  fn main() {
+      let f = File::open("hello.txt");
+  }
+  ```
+* ```match``` 표현식을 이용하여 ```Result``` 처리하기
+  <br>
+
+  ```rust
+  use std::fs::File;
+
+  fn main() {
+      let f = File::open("hello.txt");
+  
+      let f = match f {
+          Ok(file) => file,  // File::open이 성공하여 Ok 인스턴스 전
+          Err(error) => {
+              panic!("There was a problem opening the file: {:?}", error)
+          },
+      };
+  }
+  ```
+  ```rust
+  // hello.txt 파일 존재하지 않음
+  thread 'main' panicked at 'There was a problem opening the file: Os { code: 2, kind: NotFound, message: "No such file or directory" }', src/main.rs:9:13
+  ```
+<br>
+
+<details>
+<summary>서로 다른 에러에 대해 매칭</summary>
+<div markdown="1">
+
+```rust
+use std::fs::File;
+use std::io::ErrorKind;
+
+fn main() {
+    let f = File::open("hello.txt");  // 파일 열기 시도, 결과 리턴
+
+    let f = match f {
+        Ok(file) => file,  // 성공적으로 파일이 열릴 시 file 리턴
+        Err(ref error) if error.kind() == ErrorKind::NotFound => {
+            match File::create("hello.txt") {  // 파일이 존재하지 않는 경우 hello.txt 파일 생성
+                Ok(fc) => fc,  // 파일 성공적으로 생성 시 fc 반환
+                Err(e) => {  // 오류 발생 시 패닉 매크로와 함께 종료됨
+                    panic!(
+                        "Tried to create file but there was a problem: {:?}",
+                        e
+                    )
+                },
+            }
+        },
+        Err(error) => {  // 파일 열 때 오류 발생 시 패닉 매크로와 함께 종료
+            panic!(
+                "There was a problem opening the file: {:?}",
+                error
+            )
+        },
+    };
+}
+```
+</details>
+  
+  
 <br>
 
 ## 3. To panic!🤯 or Not to panic!🤓
