--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -73,7 +73,7 @@ fn main() {
 
     let f = match f {
         Ok(file) => file,  // 성공적으로 파일이 열릴 시 file 리턴
-        Err(ref error) if error.kind() == ErrorKind::NotFound => {
+        Err(ref error) if error.kind() == ErrorKind::NotFound => {  // ErrorKind::NotFound variant 사용됨
             match File::create("hello.txt") {  // 파일이 존재하지 않는 경우 hello.txt 파일 생성
                 Ok(fc) => fc,  // 파일 성공적으로 생성 시 fc 반환
                 Err(e) => {  // 오류 발생 시 패닉 매크로와 함께 종료됨
@@ -93,6 +93,10 @@ fn main() {
     };
 }
 ```
+* ```io::Error```
+    * 표준 라이브러리에서 제공하는 구조체
+    * ```kind``` 메소드를 호출하여 ```io::ErrorKind``` 값을 얻음
+    * ```io::ErrorKind```: ```io``` 연산으로부터 발생할 수 있는 여러 종류의 에러를 표현하는 variant를 가진 열거형
 </details>
   
   
