--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -60,10 +60,7 @@
   ```
 <br>
 
-<details>
-<summary>서로 다른 에러에 대해 매칭</summary>
-<div markdown="1">
-
+### 서로 다른 에러에 대해 매칭
 ```rust
 use std::fs::File;
 use std::io::ErrorKind;
@@ -97,7 +94,11 @@ fn main() {
     * 표준 라이브러리에서 제공하는 구조체
     * ```kind``` 메소드를 호출하여 ```io::ErrorKind``` 값을 얻음
     * ```io::ErrorKind```: ```io``` 연산으로부터 발생할 수 있는 여러 종류의 에러를 표현하는 variant를 가진 열거형
-</details>
+* *match guard*: 조건문 ```if error.kind() == ErrorKind::NotFound```
+    * 추가 조건문 역할
+    * ```match``` 패턴에서 ```ref```을 사용하여 ```error```의 소유권이 가드 조건문으로 이동되지 않고 참조만 되도록 함!!
+    * ```ref```는 값을 매치하여 그 참조자를 제공함 (```&```는 참조자를 매치하고 그 값 제공)
+
   
   
 <br>
