--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -98,8 +98,26 @@ fn main() {
     * 추가 조건문 역할
     * ```match``` 패턴에서 ```ref```을 사용하여 ```error```의 소유권이 가드 조건문으로 이동되지 않고 참조만 되도록 함!!
     * ```ref```는 값을 매치하여 그 참조자를 제공함 (```&```는 참조자를 매치하고 그 값 제공)
+<br>
 
-  
+### ```unwrap```과 ```expect```
+match 구문과 비슷한 역할을 하는 ```unwrap``` 메소드
+* ```Result``` 값으로 ```Ok``` 또는 ```Err```을 리턴
+<br>
+
+```rust
+let f = File::open("hello.txt").unwrap();
+```
+<br><br>
+
+```expect``` 메소드
+* 에러 메시지를 설정할 수 있어, 패닉 메시지 파악하기 쉬워짐
+* unwrap에는 문자열이 안 들어
+<br>
+
+```rust
+let f = File::open("hello.txt").expect("Failed to open hello.txt");
+```
   
 <br>
 
