--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -111,8 +111,8 @@ let f = File::open("hello.txt").unwrap();
 <br><br>
 
 ```expect``` 메소드
-* 에러 메시지를 설정할 수 있어, 패닉 메시지 파악하기 쉬워짐
-* unwrap에는 문자열이 안 들어
+* 에러 메시지의 내용을 설정할 수 있어, 패닉 메시지를 파악하기 쉬워짐
+* unwrap에는 문자열이 안 들어감
 <br>
 
 ```rust
