--- a/rustlang/09_에러처리.md
+++ b/rustlang/09_에러처리.md
@@ -117,9 +117,12 @@ let f = File::open("hello.txt").unwrap();
 
 ```rust
 let f = File::open("hello.txt").expect("Failed to open hello.txt");
-```
-  
+```  
 <br>
+
+### 에러 전파하기
+실패의 가능성이 있는 함수를 작성할 때, 해당 **함수 내에서** 처리하는 대신, **에러를 호출하는 코드 쪽으로 반환**하여 처리
+* 더 많은 정보와 로직, 제어권
 
 ## 3. To panic!🤯 or Not to panic!🤓
 ┌ ```panic!``` 사용 → 코드가 복구 불가함을 인정하는 것<br>
